# PEP 621 project metadata
[project]
name = "wrapi"
version = "0.1.0"
description = ""
authors = [
    { name = "Junqed", email = "junqed+github@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest>=5.2",
    "toml>=0.10",
    "mypy>=0.701",
    "ruff", # Replaces flake8, isort, black
]

# Build system configuration using Hatch
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff configuration (replaces isort, black, flake8)
[tool.ruff]
line-length = 120 # Global line length

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = []

[tool.ruff.lint.isort]
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]
# multi_line_output and force_grid_wrap from isort don't have direct equivalents in Ruff's isort implementation yet.
